# midiprog-gui-rs

./: Cargo.toml  README.md
config/DW8P/: DW8P.qml  config.json  midi.json
config/PG300/: PG300.qml  config.json
qml/: main.qml
qml/ju-2/: PG300.qml  PG300Bender.qml  PG300Chorus.qml  PG300DCO.qml  PG300ENV.qml  PG300LFO.qml  PG300Slider.qml  PG300VCA.qml  PG300VCF.qml  Style.qml
src/: main.rs
