[package]
name = "qml-test"
version = "0.1.0"
authors = ["Florent Uguet <florent.uguet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midiprog = { git = "https://github.com/FuSoftware/midiprog-rs" }
qmetaobject = "*"
cstr = "*"

